// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`__interactive 1`] = `
<DocumentFragment>
  <div
    style="width: 300px;"
  >
    <div
      class="inputField"
    >
      <div
        class="top"
      >
        <span
          class="title"
        >
          標題
        </span>
        <span
          class="mustFill"
        >
          mustFill
        </span>
      </div>
      <input
        class="input"
        placeholder="placeholder"
        type="text"
        value="test"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`with error 1`] = `
<DocumentFragment>
  <div
    style="width: 300px;"
  >
    <div
      class="inputField"
    >
      <div
        class="top"
      >
        <span
          class="title"
        >
          標題
        </span>
        <span
          class="mustFill"
        >
          mustFill
        </span>
      </div>
      <input
        class="input errorInput"
        placeholder="placeholder"
        type="text"
        value="test"
      />
      <div
        class="errorBox"
      >
        <test-file-stub />
        <div
          class="errorText"
        >
          錯誤
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`with type password 1`] = `
<DocumentFragment>
  <div
    style="width: 300px;"
  >
    <div
      class="inputField"
    >
      <div
        class="top"
      >
        <span
          class="title"
        >
          標題
        </span>
        <span
          class="mustFill"
        >
          mustFill
        </span>
      </div>
      <input
        class="input"
        placeholder="placeholder"
        type="password"
        value="test"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`without must fill 1`] = `
<DocumentFragment>
  <div
    style="width: 300px;"
  >
    <div
      class="inputField"
    >
      <div
        class="top"
      >
        <span
          class="title"
        >
          標題
        </span>
      </div>
      <input
        class="input"
        placeholder="placeholder"
        type="password"
        value="test"
      />
    </div>
  </div>
</DocumentFragment>
`;
